// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu group should render a menu group with a label 1`] = `
<ic-menu-group aria-label="Menu item label" label="Menu item label">
  <mock:shadow-root>
    <ic-typography variant="subtitle-small">
      Menu item label
    </ic-typography>
    <ul role="group">
      <slot></slot>
    </ul>
    <hr>
  </mock:shadow-root>
  <ic-menu-item label="Button" variant="default">
    <mock:shadow-root>
      <li aria-disabled="false" role="menuitem">
        <ic-button aria-disabled="false" aria-label="Button, Menu item label menu group" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="focus-border">
            <span class="icon">
              <slot name="icon"></slot>
            </span>
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
    <svg height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
      <path d="M0 0h24v24H0V0z" fill="none"></path>
      <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
    </svg>
  </ic-menu-item>
  <ic-menu-item label="Button" variant="default">
    <mock:shadow-root>
      <li aria-disabled="false" role="menuitem">
        <ic-button aria-disabled="false" aria-label="Button, Menu item label menu group" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="focus-border">
            <span class="icon">
              <slot name="icon"></slot>
            </span>
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
    <svg height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
      <path d="M0 0h24v24H0V0z" fill="none"></path>
      <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
    </svg>
  </ic-menu-item>
  <ic-menu-item description="This button has a href and so it behaves like a link" href="#" label="Button" variant="default">
    <mock:shadow-root>
      <li aria-disabled="false" role="menuitem">
        <ic-button aria-disabled="false" aria-label="Button, This button has a href and so it behaves like a link, Menu item label menu group" disabletooltip="" fullwidth="" href="#" variant="tertiary">
          <div class="focus-border">
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button
                </ic-typography>
              </div>
              <ic-typography class="menu-item-description" variant="caption">
                This button has a href and so it behaves like a link
              </ic-typography>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
  </ic-menu-item>
</ic-menu-group>
`;

exports[`menu group should render a menu group without a label 1`] = `
<ic-menu-group>
  <mock:shadow-root>
    <ul role="group">
      <slot></slot>
    </ul>
    <hr>
  </mock:shadow-root>
  <ic-menu-item label="Button" variant="default">
    <mock:shadow-root>
      <li aria-disabled="false" role="menuitem">
        <ic-button aria-disabled="false" aria-label="Button" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="focus-border">
            <span class="icon">
              <slot name="icon"></slot>
            </span>
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
    <svg height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
      <path d="M0 0h24v24H0V0z" fill="none"></path>
      <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
    </svg>
  </ic-menu-item>
  <ic-menu-item label="Button" variant="default">
    <mock:shadow-root>
      <li aria-disabled="false" role="menuitem">
        <ic-button aria-disabled="false" aria-label="Button" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="focus-border">
            <span class="icon">
              <slot name="icon"></slot>
            </span>
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
    <svg height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
      <path d="M0 0h24v24H0V0z" fill="none"></path>
      <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
    </svg>
  </ic-menu-item>
  <ic-menu-item description="This button has a href and so it behaves like a link" href="#" label="Button" variant="default">
    <mock:shadow-root>
      <li aria-disabled="false" role="menuitem">
        <ic-button aria-disabled="false" aria-label="Button, This button has a href and so it behaves like a link" disabletooltip="" fullwidth="" href="#" variant="tertiary">
          <div class="focus-border">
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button
                </ic-typography>
              </div>
              <ic-typography class="menu-item-description" variant="caption">
                This button has a href and so it behaves like a link
              </ic-typography>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
  </ic-menu-item>
</ic-menu-group>
`;
